--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,16 @@
   </head>
   <body>
     <p>Welcome this chatapp</p>
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+      var socket = io();
+      socket.on('connect', () => {
+        console.log('Connect to server');
+      });
+
+      socket.on('disconnect', () => {
+        console.log('disconnect to server');
+      });
+    </script>
   </body>
 </html>
